# dashboardpython

./: .editorconfig  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  main.spec  nfpm.yaml  noxfile.py  prompt.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  codeql.yml  release-please.yml  release.yml
app/: main.py
packaging/: PACKAGE_NAME.desktop  PACKAGE_NAME.spec  installer.wxs  nfpm.yaml  template.desktop
packaging/macos/: entitlements.plist
packaging/wix/: Product.wxs
scripts/: build_appimage.sh  build_deb.sh  build_dmg.sh  build_nuitka.ps1  build_nuitka.sh  build_pyinstaller.ps1  build_pyinstaller.sh  build_rpm.sh
src/PACKAGE_NAME/: __init__.py  __main__.py
tests/: conftest.py  test_package.py  test_smoke.py
