[project]
name = "dashboardpython"
version = "0.10.0"
description = "PySide6 desktop-app template with PyInstaller builds and release-please releases"
requires-python = ">=3.11"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
