# =============================================================================
# pyproject.toml — production-ready Python project configuration
# TODO: Replace every occurrence of PACKAGE_NAME, ORGANIZATION, PYPI_PROJECT_NAME
# =============================================================================

[build-system]
requires      = ["hatchling>=1.25", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

# ── Project metadata (PEP 621) ────────────────────────────────────────────────
[project]
name            = "PACKAGE_NAME"          # TODO
version         = "0.1.0"                 # overridden by hatch-vcs on tagged builds
description     = "PYPI_PROJECT_NAME"     # TODO
readme          = "README.md"
license         = { text = "MIT" }
requires-python = ">=3.10"
authors         = [{ name = "ORGANIZATION", email = "dev@example.com" }] # TODO
keywords        = []
classifiers     = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    # TODO: add runtime dependencies
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "mypy>=1.11",
    "ruff>=0.7",
    "nox>=2024.4",
]

[project.scripts]
PACKAGE_NAME = "PACKAGE_NAME.__main__:main"   # TODO

[project.urls]
Homepage    = "https://github.com/ORGANIZATION/PACKAGE_NAME"  # TODO
Repository  = "git@github.com:ORGANIZATION/PACKAGE_NAME.git" # TODO — SSH only
Issues      = "https://github.com/ORGANIZATION/PACKAGE_NAME/issues"
Changelog   = "https://github.com/ORGANIZATION/PACKAGE_NAME/blob/main/CHANGELOG.md"

# ── Hatch / VCS versioning ────────────────────────────────────────────────────
[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme   = "no-guess-dev"
local_scheme     = "no-local-version"

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]

[tool.hatch.build.targets.wheel]
packages = ["src/PACKAGE_NAME"]   # TODO: match package name

# ── cibuildwheel ─────────────────────────────────────────────────────────────
# Reference: https://cibuildwheel.pypa.io/en/stable/options/
# manylinux_2_28 is the new default as of cibuildwheel ≥ 2.21 (May 2025)
[tool.cibuildwheel]
build           = "cp310-* cp311-* cp312-* cp313-*"
skip            = ["*-musllinux_*", "pp*"]   # skip musl + PyPy
test-requires   = ["pytest>=8"]
test-command    = "pytest {project}/tests -x -q --no-header"
build-verbosity = 1

[tool.cibuildwheel.linux]
archs                    = ["x86_64", "aarch64"]
manylinux-x86_64-image   = "manylinux_2_28"
manylinux-aarch64-image  = "manylinux_2_28"
# QEMU required for aarch64 cross-compilation — enabled in CI

[tool.cibuildwheel.macos]
archs                    = ["universal2"]
environment              = { MACOSX_DEPLOYMENT_TARGET = "11.0" }

[tool.cibuildwheel.windows]
archs = ["AMD64"]

# ── Ruff (linter + formatter) ─────────────────────────────────────────────────
[tool.ruff]
line-length    = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "PTH",  # flake8-use-pathlib
    "RUF",  # ruff-specific
    "ANN",  # flake8-annotations (type hints)
]
ignore = [
    "E501",    # line length — ruff format handles it
    "ANN101",  # missing self annotation
    "ANN102",  # missing cls annotation
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ── mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version      = "3.10"
strict              = true
warn_return_any     = true
warn_unused_ignores = true
no_implicit_reexport = true
show_error_codes    = true
files               = ["src/"]

# ── pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths   = ["tests"]
pythonpath  = ["src"]
addopts     = "-v --tb=short --strict-markers"
markers     = [
    "slow: marks tests as slow",
    "integration: marks integration tests",
]

[tool.coverage.run]
source   = ["src/PACKAGE_NAME"]
branch   = true

[tool.coverage.report]
show_missing = true
fail_under   = 80
