[project]
name = "my-app"            # TODO: rename to match your repository
version = "0.1.0"
description = "TODO: describe your application"
requires-python = ">=3.11"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
